<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="model"
                type="com.app.simplelogin.ui.auth.viewmodel.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onViewClickListener="@{model.closeKeyboard}"
            android:background="@android:color/white">


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_email_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@android:color/black"
                android:text="@string/email"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@id/login_top_hg"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_email_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                app:textChangedListener="@{model.emailTextWatcher}"
                android:hint="@string/enter_email"
                android:padding="@dimen/_6sdp"
                android:background="@drawable/bg_form_edt_border"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/login_email_title_tv"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_pwd_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@android:color/black"
                android:text="@string/password"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/login_email_edt"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_pwd_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:hint="@string/password_hint"
                android:padding="@dimen/_6sdp"
                app:textChangedListener="@{model.passwordTextWatcher}"
                android:background="@drawable/bg_form_edt_border"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/login_pwd_title_tv"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_country_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@android:color/black"
                android:text="@string/country"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/login_pwd_edt"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_country_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@android:color/black"
                android:hint="@string/select_country"
                android:padding="@dimen/_6sdp"
                android:background="@drawable/bg_form_edt_border"
                android:textSize="@dimen/_14ssp"
                android:text="@{model.countryValue}"
                android:onClick="@{(v) -> model.showCountryList(v)}"
                android:drawableRight="@drawable/ic_expand_more_black_24dp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/login_country_title_tv"
                app:layout_constraintStart_toEndOf="@id/login_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_right_vg"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_14ssp"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:onViewClickListener="@{model.onLoginButtonClick}"
                android:background="@drawable/bg_button"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/login_country_tv"
                app:layout_constraintStart_toEndOf="@id/login_button_left_vg"
                app:layout_constraintEnd_toStartOf="@id/login_button_right_vg"
                android:layout_marginTop="@dimen/_20sdp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_top_hg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.1"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_left_vg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_right_vg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_button_left_vg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_button_right_vg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>