<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="model"
                type="com.app.simplelogin.ui.main.user.viewmodel.UserListViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/users_list_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scrollbars="none"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>